--- a/style.css
+++ b/style.css
@@ -20,3 +20,15 @@ td {
   height: 50px;
   width: 50px;
 }
+
+.red {
+  background-color: red;
+}
+
+.blue {
+  background-color: blue;
+}
+
+/* .green{
+  background-color: green;
+} */
